# hippocampus

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
adapters/claude/: CLAUDE.md  INTEGRATION.md  SKILL.md  hooks-example.json  hooks.json
adapters/openclaw/: HOOK.md  INTEGRATION.md  SKILL.md  handler.ts
bench-longmemeval/: Cargo.toml
bench-longmemeval/src/: main.rs
src/: cognitive_map.rs  config.rs  conflict.rs  dedup.rs  emotion.rs  engram.rs  gateway.rs  learned_keywords.rs  lib.rs  main.rs  memory_gate.rs  reconsolidation.rs  reflect.rs  scoring.rs  search.rs  semantic_network.rs  session.rs  simhash.rs  stop_words.rs  store.rs  util.rs
web/: app.js  index.html  style.css
