[package]
name = "hippocampus"
version = "0.1.0"
edition = "2021"
description = "Biomimetic cognitive memory system for AI agents"
license = "MIT"

[[bin]]
name = "hippocampus"
path = "src/main.rs"

[lib]
name = "hippocampus"
path = "src/lib.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
axum = { version = "0.8", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["cors"] }
ureq = { version = "3", features = ["json"] }
chrono = "0.4"
